--- a/discord-clone/package.json
+++ b/discord-clone/package.json
@@ -24,15 +24,17 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^4.33.0",
     "@uploadthing/react": "^5.7.0",
     "@uploadthing/react-dropzone": "^0.0.2-canary.37865fa",
     "axios": "^1.6.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
     "emoji-mart": "^5.5.2",
     "lucide-react": "^0.292.0",
-    "next": "14.0.2",
+    "next": "13.4.12",
     "next-themes": "^0.2.1",
     "query-string": "^8.1.0",
     "react": "^18",
@@ -54,7 +56,7 @@
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.2",
+    "eslint-config-next": "13.4.12",
     "postcss": "^8",
     "prisma": "^5.5.2",
     "tailwindcss": "^3.3.0",
